--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
     <main class="container">
         <header class="header">
             <nav class="main-nav">
-                <span class="n-market">
-                    Ali Iranmanesh
-                </span>
                 <ul class="list-menue">
-                    <li class="item-menue">Home</li>
-                    <li class="item-menue">About</li>
-                    <li class="item-menue">resume</li>
-                    <li class="item-menue">GitHub</li>
+                    <li class="item-menue"><a href="#">Home</a></li>
+                    <li class="item-menue"><a href="#">About</a></li>
+                    <li class="item-menue"><a href="#">Resume</a></li>
+                    <li class="item-menue"><a href="#">Weblog</a></li>
+                    <li class="item-menue"><a href="https://github.com/Aliiranmanesh">GitHub</a></li>
                 </ul>
             </nav>
             <nav class="button">
-                <div class="contact-button">Contact me</div>
+                <div class="contact-button"><a href="#">Contact me</a></div>
             </nav>
         </header>
         <section class="main-section">
             <section class="section-left">
+                <h2>Lorem, ipsum dolor sit amet consectetur</h2>
                 <span class="description-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati animi, totam dolores laudantium sint voluptatem, magnam facilis autem repudiandae eaque maiores quo nihil nam natus earum? Modi ducimus sequi natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi eaque molestias voluptates iste, perferendis velit tenetur commodi soluta saepe atque culpa voluptatum obcaecati, illum a mollitia quasi, tempore dignissimos possimus?</span>
                 <div class="button-container">
-                    <span class="contact-button">View Portfolio</span>
-                    <span class="contact-button contact-button-r">Contact me</span>
+                    <span class="contact-button"><a href="#">View Portfolio</a></span>
+                    <span class="contact-button contact-button-r"><a href="#">Contact me</a></span>
                 </div>
             </section>
             <section class="section-right">
                 <img class="my-icon" src="/icons/219970.png" alt="my logo">
             </section>
         </section>
+        <footer class="footer-style">
+            Open-source blog template, created width &#128153; by me. Fork it on <a href="https://github.com/Aliiranmanesh"> &nbsp; GitHub</a>
+        </footer>
     </main>
 </body>
 </html>
