formating the code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
-    <title>Iranmanesh</title>
+    <title>Blog</title>
 </head>
+
 <body>
     <main class="container">
         <header class="header">
@@ -18,14 +20,16 @@
                     <li class="item-menue"><a href="https://github.com/Aliiranmanesh">GitHub</a></li>
                 </ul>
             </nav>
-            <nav class="button">
-                <div class="contact-button"><a href="#">Contact me</a></div>
-            </nav>
+            <div class="contact-button"><a href="#">Contact me</a></div>
         </header>
         <section class="main-section">
             <section class="section-left">
                 <h2>Lorem, ipsum dolor sit amet consectetur</h2>
-                <span class="description-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati animi, totam dolores laudantium sint voluptatem, magnam facilis autem repudiandae eaque maiores quo nihil nam natus earum? Modi ducimus sequi natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi eaque molestias voluptates iste, perferendis velit tenetur commodi soluta saepe atque culpa voluptatum obcaecati, illum a mollitia quasi, tempore dignissimos possimus?</span>
+                <span class="description-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
+                    animi, totam dolores laudantium sint voluptatem, magnam facilis autem repudiandae eaque maiores quo
+                    nihil nam natus earum? Modi ducimus sequi natus! Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Animi eaque molestias voluptates iste, perferendis velit tenetur commodi soluta saepe atque
+                    culpa voluptatum obcaecati, illum a mollitia quasi, tempore dignissimos possimus?</span>
                 <div class="button-container">
                     <span class="contact-button"><a href="#">View Portfolio</a></span>
                     <span class="contact-button contact-button-r"><a href="#">Contact me</a></span>
@@ -36,8 +40,10 @@
             </section>
         </section>
         <footer class="footer-style">
-            Open-source blog template, created width &#128153; by me. Fork it on <a href="https://github.com/Aliiranmanesh"> &nbsp; GitHub</a>
+            Open-source blog template, created width &#128153; by me. Fork it on <a
+                href="https://github.com/Aliiranmanesh"> &nbsp; GitHub</a>
         </footer>
     </main>
 </body>
+
 </html>
