--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <title>Blog</title>
 </head>
@@ -12,16 +13,20 @@
     <main class="container">
         <header class="header">
             <nav class="main-nav">
+                <button class="menu-btn">☰</button>
                 <ul class="list-menue">
-                    <li class="item-menue"><a href="#">Home</a></li>
-                    <li class="item-menue"><a href="#">About</a></li>
-                    <li class="item-menue"><a href="#">Resume</a></li>
+                    <li class="item-menue"><a href="resume.html">Resume</a></li>
                     <li class="item-menue"><a href="#">Weblog</a></li>
                     <li class="item-menue"><a href="https://github.com/Aliiranmanesh">GitHub</a></li>
                 </ul>
             </nav>
-            <div class="contact-button"><a href="#">Contact me</a></div>
+            <a href="/" class="home">
+                <i class="fa fa-home"></i>
+            </a>
         </header>
+        <section class="section-icon">
+            <img class="icon-top" src="/icons/219970.png" alt="my logo">
+        </section>
         <section class="main-section">
             <section class="section-left">
                 <h2>Lorem, ipsum dolor sit amet consectetur</h2>
@@ -31,12 +36,12 @@
                     elit. Animi eaque molestias voluptates iste, perferendis velit tenetur commodi soluta saepe atque
                     culpa voluptatum obcaecati, illum a mollitia quasi, tempore dignissimos possimus?</span>
                 <div class="button-container">
-                    <span class="contact-button"><a href="#">View Portfolio</a></span>
+                    <span class="contact-button contact-button-l"><a href="#">View Portfolio</a></span>
                     <span class="contact-button contact-button-r"><a href="#">Contact me</a></span>
                 </div>
             </section>
             <section class="section-right">
-                <img class="my-icon" src="/icons/219970.png" alt="my logo">
+                <img class="icon" src="/icons/219970.png" alt="my logo">
             </section>
         </section>
         <footer class="footer-style">
